# cw-xrpl-bridge

./: .gitignore  Cargo.toml  README.md
contract/: Cargo.toml
contract/src/: contract.rs  error.rs  evidence.rs  msg.rs  operation.rs  signatures.rs  state.rs  tests.rs
contract/src/tests/: bridge.rs  fee.rs  helper.rs  instantiation.rs  key_rotation.rs  mod.rs  operation.rs  ownership.rs  precision.rs  queries.rs  register.rs  registration.rs  send.rs  ticket.rs  token.rs  validate.rs
contracts/cw-xrpl/: Cargo.toml
contracts/cw-xrpl/src/: contract.rs  error.rs  evidence.rs  fees.rs  migration.rs  msg.rs  operation.rs  relayer.rs  state.rs  tickets.rs  token.rs
contracts/cw-xrpl/src/tests/: bridge.rs  fee.rs  helper.rs  instantiation.rs  key_rotation.rs  mod.rs  operation.rs  ownership.rs  precision.rs  queries.rs  rate_limit.rs  register.rs  send.rs  ticket.rs  token.rs  validate.rs
contracts/cw-xrpl/src/tests/testdata/: cw-xrpl.wasm  rate-limiter.wasm
relayer/: package.json  tsconfig.json
relayer/cmd/: main.go
relayer/lib/: CwXrpl.client.ts  CwXrpl.types.ts
relayer/src/cw-simulate/: tokenfactory.ts
relayer/src/cw-simulate/handleCustom/: handleTokenFactory.ts
relayer/tests/: contract.spec.ts
relayer/tests/testdata/: cw-xrpl.wasm
spec/: spec.md
