[package]
name = "cw-bridge-xrpl"
version = "0.1.0"
authors = ["Coreum", "Oraichain Labs"]
edition = "2021"

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
bs58 = "0.5.0"
cosmwasm-schema = "1.2"
cosmwasm-std = { version = "1.2", features = ["cosmwasm_1_1"] }
cw-ownable = "0.5.1"
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cw2 = "1.0.1"
sha2 = "0.10.8"
thiserror = "1.0.56"
tokenfactory = { git = "https://github.com/oraichain/token-bindings.git", rev = "e85d734" }
token-bindings = { git = "https://github.com/oraichain/token-bindings.git", rev = "e85d734" }

[dev-dependencies]
cosmwasm-testing-util = { git = "https://github.com/oraichain/cosmwasm-testing-util.git", rev = "aaa09cf" }
cw-multi-test = "0.16.6"
ripple-keypairs = "0.1.0"
rand = "0.8.5"

[patch.crates-io]
ripple-keypairs = { git = 'https://github.com/CoreumFoundation/ripple-keypairs-rust.git' }
