[package]
name = "cw-xrpl-bridge"
version = "0.1.0"
authors = ["Coreum", "Oraichain Labs"]
edition = "2021"

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []
default = ["cosmwasm_1_1"]
cosmwasm_1_1 = [
    "cosmwasm-std/cosmwasm_1_1",
    "cosmwasm-testing-util/cosmwasm_1_1",
]
cosmwasm_1_2 = [
    "cosmwasm_1_1",
    "cosmwasm-std/cosmwasm_1_2",
    "cosmwasm-testing-util/cosmwasm_1_2",
]
cosmwasm_1_3 = [
    "cosmwasm_1_2",
    "cosmwasm-std/cosmwasm_1_3",
    "cosmwasm-testing-util/cosmwasm_1_3",
]
cosmwasm_1_4 = [
    "cosmwasm_1_3",
    "cosmwasm-std/cosmwasm_1_4",
    "cosmwasm-testing-util/cosmwasm_1_4",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
bs58 = "0.5.0"
cosmwasm-schema = "1.5"
cosmwasm-std = { version = "1.5" }
cw-ownable = "0.5.1"
cw-storage-plus = "1.0"
cw-utils = "1.0"
cw2 = "1.0"
sha2 = "0.10.8"
thiserror = "1.0.56"
derive_more = "0.99.17"
tokenfactory = { git = "https://github.com/oraichain/token-bindings.git", rev = "7861576" }
token-bindings = { git = "https://github.com/oraichain/token-bindings.git", rev = "7861576" }

[dev-dependencies]
cosmwasm-testing-util = { git = "https://github.com/oraichain/cosmwasm-testing-util.git", rev = "ed58567" }
ripple-keypairs = "0.1.0"
rand = "0.8.5"

[patch.crates-io]
ripple-keypairs = { git = 'https://github.com/CoreumFoundation/ripple-keypairs-rust.git' }
