[package]
name = "cw-xrpl"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []
test-tube = []
default = ["cosmwasm_1_1"]
cosmwasm_1_1 = [
    "cosmwasm-std/cosmwasm_1_1",
    "cosmwasm-testing-util/cosmwasm_1_1",
]
cosmwasm_1_2 = [
    "cosmwasm_1_1",
    "cosmwasm-std/cosmwasm_1_2",
    "cosmwasm-testing-util/cosmwasm_1_2",
]
cosmwasm_1_3 = [
    "cosmwasm_1_2",
    "cosmwasm-std/cosmwasm_1_3",
    "cosmwasm-testing-util/cosmwasm_1_3",
]
cosmwasm_1_4 = [
    "cosmwasm_1_3",
    "cosmwasm-std/cosmwasm_1_4",
    "cosmwasm-testing-util/cosmwasm_1_4",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-ownable = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
tokenfactory = { workspace = true, features = ["library"] }
token-bindings = { workspace = true }
bs58 = "0.5.0"
sha2 = "0.10.8"
rate-limiter = { workspace = true, features = ["library"] }
skip = { workspace = true }

[dev-dependencies]
cosmwasm-testing-util = { workspace = true }
ripple-keypairs = { workspace = true }
rand = "0.8.5"
